[package]
name = "samos"
version = "0.1.0"
edition = "2018"
authors = ["Samuel Berger"]

# Disable stack unwinding.
[profile.dev]
panic = "abort"

# Disable stack unwinding.
[profile.release]
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[dependencies]
